--- a/css/default.css
+++ b/css/default.css
@@ -5,3 +5,40 @@ body {
 input {
   font-size: 32px;
 }
+/* Modal Styles */
+#modal {
+  width: 600px;
+/*  min-height: 400px;*/
+  padding: 30px;
+  background-color: rgba(200,30,30,0.8);
+  border-radius:50px;
+  border: 4px solid rgb(200,30,30);
+
+  position: fixed;
+  top: 20%;
+  left: 20%;
+  right: 20%;
+  display:none;
+}
+body.modal-on #modal {
+  display: block;
+}
+#modal h2,
+#modal h3 {
+  margin: 15px 0;
+}
+body.modal-on:before {
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  content: "";
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+
+
+
+
