--- a/css/default.css
+++ b/css/default.css
@@ -36,6 +36,18 @@ body.modal-on:before {
   content: "";
   background-color: rgba(0,0,0,0.8);
 }
+#modal .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgba(200,30,30,0.8);
+  border-radius:50%;
+  border: 4px solid rgb(200,30,30);
+}
+
+
+
+
 
 
 
